infra/redis-pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: redis
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis
