infra/hello-world-api.service.yml
kind: Service
apiVersion: v1
metadata:
  name: helloworldapi
spec:
  selector:
    app: helloworldapi
  ports:
    - port: 3000
