infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /translates
            backend:
              service:
                name: helloworldapi
                port:
                  number: 3000
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: helloworldauth
                port:
                  number: 3005
          - pathType: Prefix
            path: /socket
            backend:
              service:
                name: helloworldsocket
                port:
                  number: 3001
